--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ filterwarnings =
     ignore::DeprecationWarning:jsonschema
 nb_test_files = True
 nb_file_fnmatch = 'Concentration from DLS.ipynb'
+nb_post_processors =
+    coalesce_streams
 nb_diff_ignore =
     /metadata/language_info
     /cells/*/execution_count
